PapaJhons dashBoard is done and add ErrorPage and adding Contact us reply

--- a/Papa-Jhons/Papa-Jhons.csproj
+++ b/Papa-Jhons/Papa-Jhons.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\assets\images\Offers\" />
     <Folder Include="wwwroot\assets\images\Products\" />
   </ItemGroup>
 
